// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Lessonicon /> should render a Svg 1`] = `
.c0 {
  display: block;
  outline: 1px solid #737373;
  outline-offset: 3px;
  border-radius: 3px;
  fill: #595959;
}

<Svg
  className="c0"
  height="20px"
  path={
    <path
      d="M23 0h16c.42 0 1 .895 1 2s-.58 2-1 2H23c-.42 0-1-.895-1-2s.58-2 1-2zm0 12h16c.42 0 1 .895 1 2s-.58 2-1 2H23c-.42 0-1-.895-1-2s.58-2 1-2zM1 24h38c.347 0 1 .895 1 2s-.653 2-1 2H1c-.347 0-1-.895-1-2s.653-2 1-2zm0 12h38c.347 0 1 .895 1 2s-.653 2-1 2H1c-.347 0-1-.895-1-2s.653-2 1-2zM8 0C3.582 0 0 3.582 0 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8z"
      fillRule="evenodd"
    />
  }
  theme={
    Object {
      "pale": "#999",
    }
  }
  viewBox="0 0 40 40"
  width="20px"
/>
`;

exports[`<Lessonicon /> should render its css w/ props theme 1`] = `
.c0 {
  display: block;
  outline: 1px solid #86cbe9;
  outline-offset: 3px;
  border-radius: 3px;
  fill: #5bb9e2;
}

<Svg
  className="c0"
  height="20px"
  path={
    <path
      d="M23 0h16c.42 0 1 .895 1 2s-.58 2-1 2H23c-.42 0-1-.895-1-2s.58-2 1-2zm0 12h16c.42 0 1 .895 1 2s-.58 2-1 2H23c-.42 0-1-.895-1-2s.58-2 1-2zM1 24h38c.347 0 1 .895 1 2s-.653 2-1 2H1c-.347 0-1-.895-1-2s.653-2 1-2zm0 12h38c.347 0 1 .895 1 2s-.653 2-1 2H1c-.347 0-1-.895-1-2s.653-2 1-2zM8 0C3.582 0 0 3.582 0 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8z"
      fillRule="evenodd"
    />
  }
  theme={
    Object {
      "pale": "rgb(199, 231, 245)",
    }
  }
  viewBox="0 0 40 40"
  width="20px"
/>
`;

exports[`<ListSideBox /> should not render ProgressBar when props percentuale is < 0 1`] = `<ListSideBox__SideBox />`;

exports[`<ListSideBox /> should render 1 Svg when props assigned & retired are both set 1`] = `
<ListSideBox__SideBox>
  <Svg
    fill="rgb(209, 209, 209)"
    height="18px"
    path={
      <path
        d="M192.007 464c25.308 0 46.002-20.598 46.002-46h-92.005c0 25.402 20.694 46 46.002 46zM118.004 67c12.666-7.51 26.505-13.34 41.002-17V33c-.69-17.95 13.973-33 33-33 19.335 0 34 15.05 33.002 33v17c65.325 15.986 113.835 76.184 117.005 151v93L118.003 67zm-53.002 55c-13.677 22.79-21.874 49.827-23 79v125L0 393h332.012l19 19c8.144 7.99 20.73 7.992 28.002 0l-1 1c7.977-7.407 7.986-20.13 0-28L34 36c-8.117-7.985-20.695-7.997-28 0l1-1C-.945 42.4-.94 55.122 7 63l58.002 59z"
        fillRule="evenodd"
      />
    }
    viewBox="0 0 384 464"
    width="15px"
  />
</ListSideBox__SideBox>
`;

exports[`<ListSideBox /> should render 1 Svg when props assigned is set 1`] = `
<ListSideBox__SideBox>
  <Svg
    fill="rgb(251, 158, 36)"
    height="18px"
    path={
      <path
        d="M200 468c21.31 0 42-22.5 42-50h-92c0 27.5 20.707 50 50 50zm142-267c-3.172-75.01-51.73-135.115-117-151V33c.88-17.974-13.8-33-33-33s-33.88 15.026-33 33v17C93.748 65.885 45.172 125.99 42 201v125L0 393h384l-42-67V201z"
        fillRule="evenodd"
      />
    }
    viewBox="0 0 384 468"
    width="15px"
  />
</ListSideBox__SideBox>
`;

exports[`<ListSideBox /> should render 1 Svg when props locked is set 1`] = `
<ListSideBox__SideBox>
  <Svg
    fill="rgb(209, 209, 209)"
    height="18px"
    path={
      <path
        d="M174.9 349.8h278.48V244.28q0-57.65-41-98.69t-98.69-40.06q-57.65 1-98.69 40.06t-40.06 98.69V349.8zm453.37 51.79v314.62a47.59 47.59 0 0 1-15.63 36.15A56.39 56.39 0 0 1 575.51 768H52.77q-22.47 0-37.13-15.63T.01 716.22V401.59q0-21.5 15.63-37.13t37.13-14.66h16.61V244.27q0-99.66 72.31-172T313.65 0q99.67 0 172.95 72.3t71.33 172v105.5h17.59q22.47 0 37.13 14.66t15.63 37.13z"
      />
    }
    viewBox="0 0 628.27 768"
    width="15px"
  />
</ListSideBox__SideBox>
`;

exports[`<ListSideBox /> should render 1 Svg when props retired is set 1`] = `
<ListSideBox__SideBox>
  <Svg
    fill="rgb(209, 209, 209)"
    height="18px"
    path={
      <path
        d="M192.007 464c25.308 0 46.002-20.598 46.002-46h-92.005c0 25.402 20.694 46 46.002 46zM118.004 67c12.666-7.51 26.505-13.34 41.002-17V33c-.69-17.95 13.973-33 33-33 19.335 0 34 15.05 33.002 33v17c65.325 15.986 113.835 76.184 117.005 151v93L118.003 67zm-53.002 55c-13.677 22.79-21.874 49.827-23 79v125L0 393h332.012l19 19c8.144 7.99 20.73 7.992 28.002 0l-1 1c7.977-7.407 7.986-20.13 0-28L34 36c-8.117-7.985-20.695-7.997-28 0l1-1C-.945 42.4-.94 55.122 7 63l58.002 59z"
        fillRule="evenodd"
      />
    }
    viewBox="0 0 384 464"
    width="15px"
  />
</ListSideBox__SideBox>
`;

exports[`<ListSideBox /> should render 1 checkbox w/ props checkbox 1`] = `
<ListSideBox__SideBox>
  <input
    onChange={[Function]}
    type="checkbox"
  />
</ListSideBox__SideBox>
`;

exports[`<ListSideBox /> should render 1 checkbox w/ props checkbox and checked = true 1`] = `
<ListSideBox__SideBox>
  <input
    checked={true}
    onChange={[Function]}
    type="checkbox"
  />
</ListSideBox__SideBox>
`;

exports[`<ListSideBox /> should render 1 child w/ 1 svg w/ props lesson 1`] = `
<ListSideBox__SideBox>
  <ListSideBox__Lessonicon
    height="20px"
    path={
      <path
        d="M23 0h16c.42 0 1 .895 1 2s-.58 2-1 2H23c-.42 0-1-.895-1-2s.58-2 1-2zm0 12h16c.42 0 1 .895 1 2s-.58 2-1 2H23c-.42 0-1-.895-1-2s.58-2 1-2zM1 24h38c.347 0 1 .895 1 2s-.653 2-1 2H1c-.347 0-1-.895-1-2s.653-2 1-2zm0 12h38c.347 0 1 .895 1 2s-.653 2-1 2H1c-.347 0-1-.895-1-2s.653-2 1-2zM8 0C3.582 0 0 3.582 0 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8z"
        fillRule="evenodd"
      />
    }
    theme={
      Object {
        "pale": "#999",
      }
    }
    viewBox="0 0 40 40"
    width="20px"
  />
</ListSideBox__SideBox>
`;

exports[`<ListSideBox /> should render 1 child w/ 2 svg when props studenti is === 0 1`] = `
<ListSideBox__SideBox>
  <ListSideBox__SideBoxTxt>
    <ListSideBox__Usericon
      fill="rgb(231, 236, 236)"
      height="16px"
      path={
        <g
          fillRule="nonzero"
        >
          <path
            d="M0 446.93V512h512v-65.07C512 362.73 341.03 320 256 320S0 362.844 0 446.93zM128 128c0 70.4 57.6 128 128 128s128-57.6 128-128S326.4 0 256 0 128 57.6 128 128z"
          />
        </g>
      }
      viewBox="0 0 512 512"
      width="16px"
    />
    0
    <ListSideBox__RightCareticon
      height="18px"
      path={
        <path
          d="M29.38 26.528L3.674.634c-.838-.84-2.2-.847-3.037-.006-.848.84-.848 2.207-.01 3.048L24.823 28.05.63 52.32c-.84.843-.84 2.208 0 3.05.42.422.965.63 1.518.63.548 0 1.1-.21 1.52-.63L29.37 29.576c.84-.84.84-2.2.01-3.048z"
          fillRule="evenodd"
        />
      }
      viewBox="0 0 30 56"
      width="9px"
    />
  </ListSideBox__SideBoxTxt>
</ListSideBox__SideBox>
`;

exports[`<ListSideBox /> should render 1 child w/ 2 svg when props studenti is >= 0 1`] = `
<ListSideBox__SideBox>
  <ListSideBox__SideBoxTxt>
    <ListSideBox__Usericon
      fill="rgb(231, 236, 236)"
      height="16px"
      path={
        <g
          fillRule="nonzero"
        >
          <path
            d="M0 446.93V512h512v-65.07C512 362.73 341.03 320 256 320S0 362.844 0 446.93zM128 128c0 70.4 57.6 128 128 128s128-57.6 128-128S326.4 0 256 0 128 57.6 128 128z"
          />
        </g>
      }
      viewBox="0 0 512 512"
      width="16px"
    />
    1
    <ListSideBox__RightCareticon
      height="18px"
      path={
        <path
          d="M29.38 26.528L3.674.634c-.838-.84-2.2-.847-3.037-.006-.848.84-.848 2.207-.01 3.048L24.823 28.05.63 52.32c-.84.843-.84 2.208 0 3.05.42.422.965.63 1.518.63.548 0 1.1-.21 1.52-.63L29.37 29.576c.84-.84.84-2.2.01-3.048z"
          fillRule="evenodd"
        />
      }
      viewBox="0 0 30 56"
      width="9px"
    />
  </ListSideBox__SideBoxTxt>
</ListSideBox__SideBox>
`;

exports[`<ListSideBox /> should render 1 radio w/ props radio 1`] = `
<ListSideBox__SideBox>
  <input
    onChange={[Function]}
    type="radio"
  />
</ListSideBox__SideBox>
`;

exports[`<ListSideBox /> should render 1 radio w/ props radio and selected 1`] = `
<ListSideBox__SideBox>
  <input
    checked={true}
    onChange={[Function]}
    type="radio"
  />
</ListSideBox__SideBox>
`;

exports[`<ListSideBox /> should render ProgressBar when props percentuale is >= 0 1`] = `
<ListSideBox__SideBox>
  <ProgressBar
    percentuale={3}
    steps={true}
  />
</ListSideBox__SideBox>
`;

exports[`<ListSideBox /> should render a SideBox 1`] = `<ListSideBox__SideBox />`;

exports[`<ListSideBox /> should render some text w/ props txt 1`] = `
<ListSideBox__SideBox>
  <ListSideBox__SideBoxTxt>
    ciao
  </ListSideBox__SideBoxTxt>
</ListSideBox__SideBox>
`;

exports[`<SideBox /> should render a FlexChild 1`] = `
.c0 {
  padding: 0 16px;
}

.c0 input {
  margin-left: 10px;
}

<FlexBox__FlexChild
  className="c0"
/>
`;

exports[`<SideBox /> should render its css w/ props studenti 1`] = `
.c0 {
  padding: 0 16px;
}

.c0 input {
  margin-left: 10px;
}

<FlexBox__FlexChild
  className="c0"
  studenti={true}
/>
`;
